# yasf

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  example.html
assets/: main.css  tailwind.css  worker.js
docs/decisions/: ADR-001-dioxus-web-framework.md  ADR-002-starforce-simulation-engine.md  ADR-003-canvas-node-propagation.md
src/: lib.rs  main.rs  starforce.rs
src/components/: canvas.rs  mod.rs
